# SimpleMatchmaker

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
IPServer/: main.cpp
P2PConnection/: P2PConnection.cpp  P2PConnection.h
Server/: Connections.cpp  Game.cpp  States.cpp  User.cpp  UserChangedStateVisitor.cpp  main.cpp
Server/include/: Connections.h  Game.h  IConnections.h  States.h  User.h  UserChangedStateVisitor.h
ServerConnection/: ServerConnection.cpp  ServerConnection.h
client/: ServerConnection.cpp  ServerConnection.h  clientMain.cpp
clientDemo/: clientMain.cpp
common/: Message.cpp  Utils.cpp
common/include/: Message.h  Sender.h  StateMachine.h  Utils.h
src/: Connections.cpp  Game.cpp  Message.cpp  Message.h  Sender.h  StateMachine.h  States.cpp  States.h  User.cpp  User.h  main.cpp
src/include/: Connections.h  Game.h  IConnections.h  States.h  User.h  UserChangedStateVisitor.cpp  UserChangedStateVisitor.h  UserMap.h
